--- a/views/login.pug
+++ b/views/login.pug
@@ -4,3 +4,13 @@ extends layout.pug
 block content    
             
     h1 USER LOGIN
+    
+    form(method="post" action="/user/login")
+
+        div(class="form-group")
+            label Email
+            input(type="email" name="email" class="form-control" placeholder="Email")
+        
+        div(class="form-group")
+            label Password
+            input(type="password" name="password" class="form-control" placeholder="Password")
