--- a/views/register.pug
+++ b/views/register.pug
@@ -4,3 +4,23 @@ extends layout.pug
 block content    
             
     h1 USER REGISTRATION
+    
+    form(method="post" action="/user/register")
+        
+        div(class="form-group")
+            label First Name
+            input(type="text" name="first_name" class="form-control" placeholder="First Name")
+        
+        div(class="form-group")
+            label Last Name
+            input(type="text" name="last_name" class="form-control" placeholder="Last Name")
+
+        div(class="form-group")
+            label Email
+            input(type="email" name="email" class="form-control" placeholder="Email")
+        
+        div(class="form-group")
+            label Password
+            input(type="password" name="password" class="form-control" placeholder="Password")
+
+        button(type="submit" class="btn btn-default") Submit
