Hashing password. Proper navigation. Views complete.

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,6 @@
 extends layout.pug
 
-
 block content    
             
-    table(class="table table-hover")
-        tr
-            th Date
-            th Weight
-        for item in weights
-            tr
-                td #{moment(item.date).format("MM/DD/YYYY")}
-                td #{item.weight}
+    h1 Welcome.
+    h4 Please register or login.
