--- a/views/login.pug
+++ b/views/login.pug
@@ -14,3 +14,5 @@ block content
         div(class="form-group")
             label Password
             input(type="password" name="password" class="form-control" placeholder="Password")
+
+        button(type="submit" class="btn btn-default") Submit
