--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,14 @@ html
     
     body
         
+        ul(class="nav nav-tabs")
+            li
+                a(href="/") Home
+            li
+                a(href="/user/register") Register
+            li
+                a(href="/user/login") Login
+        
         div(class="container")
             
             block content
