--- a/views/register.pug
+++ b/views/register.pug
@@ -22,5 +22,9 @@ block content
         div(class="form-group")
             label Password
             input(type="password" name="password" class="form-control" placeholder="Password")
+                
+        div(class="form-group")
+            label Confirm Password
+            input(type="password" name="confirmation" class="form-control" placeholder="Confirm Password")
 
         button(type="submit" class="btn btn-default") Submit
