--- a/views/register.pug
+++ b/views/register.pug
@@ -2,9 +2,15 @@ extends layout.pug
 
 
 block content    
-            
+
     h1 USER REGISTRATION
+
+    //- registration errors
+    if errors
+        for error in errors
+            div(class="alert alert-danger") #{error.msg}
     
+    //- registration form
     form(method="post" action="/user/register")
         
         div(class="form-group")
