--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,12 +7,18 @@ html
     body
         
         ul(class="nav nav-tabs")
+            
             li
                 a(href="/") Home
-            li
-                a(href="/user/register") Register
-            li
-                a(href="/user/login") Login
+            
+            if user
+                li
+                    a(href="#") Logout
+            else
+                li
+                    a(href="/user/register") Register
+                li
+                    a(href="/user/login") Login
         
         div(class="container")
             
