Added user logout.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
             
             if user
                 li
-                    a(href="#") Logout
+                    a(href="/user/logout") Logout
             else
                 li
                     a(href="/user/register") Register
