--- a/views/index.pug
+++ b/views/index.pug
@@ -2,5 +2,9 @@ extends layout.pug
 
 block content    
             
-    h1 Welcome.
+    if user
+        h1 Welcome, #{user.first_name}.
+    else
+        h1 Welcome.
+
     h4 Please register or login.
