--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends layout.pug
 
-block content    
+block content
+    
+    != messages("message", locals)
             
     if user
         h1 Welcome, #{user.first_name}.
