Adding dev note to the index page.

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,3 +10,8 @@ block content
         h1 Welcome.
 
     h4 Please register or login.
+    
+    br
+    
+    h1
+        em This shit is under developmet.
