--- a/views/register.pug
+++ b/views/register.pug
@@ -5,12 +5,12 @@ block content
 
     h1 USER REGISTRATION
 
-    //- registration errors
+    // registration errors
     if errors
         for error in errors
             div(class="alert alert-danger") #{error.msg}
     
-    //- registration form
+    // registration form
     form(method="post" action="/user/register")
         
         div(class="form-group")
