Adding per user weight data.

--- a/views/login.pug
+++ b/views/login.pug
@@ -3,7 +3,9 @@ extends layout.pug
 
 block content    
             
-    h1 USER LOGIN
+    h1 Login
+    
+    br
     
     form(method="post" action="/user/login")
 
