--- a/views/register.pug
+++ b/views/register.pug
@@ -3,7 +3,9 @@ extends layout.pug
 
 block content    
 
-    h1 USER REGISTRATION
+    h1 Register
+    
+    br
 
     // registration errors
     if errors
