--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,9 +16,10 @@ html
                 ul(class="nav navbar-nav")
                     li
                         a(href="/") Home
-                        
-                    li
-                        a(href="/weight") Weight
+                    
+                    if user
+                        li
+                            a(href="/weight") Weight
 
                 ul(class="nav navbar-nav navbar-right")
                     if user
