Editable user profile.

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ block content
         h1 Welcome, #{user.first_name}.
     else
         h1 Welcome.
-        h4 Please register or login.
+        h4 Please #[a(href="/user/register") register] or #[a(href="/user/login") login].
