--- a/views/weight.pug
+++ b/views/weight.pug
@@ -10,35 +10,35 @@ block content
     // weight errors
     if errors
         for error in errors
-            div(class="alert alert-danger") #{error.msg}
+            div.alert.alert-danger #{error.msg}
 
     // weight form
     form(method="post" action="/weight")
 
-        div(class="form-group")
+        div.form-group
             label Date
-            input(type="date" name="date" class="form-control")
+            input.form-control(type="date" name="date")
 
-        div(class="form-group")
+        div.form-group
             label Weight
-            input(type="number" name="weight" class="form-control")
+            input.form-control(type="number" name="weight")
 
-        button(type="submit" class="btn btn-default") Submit
+        button.btn.btn-default(type="submit") Submit
 
     br
 
     // user weights
-    table(class="table table-bordered table-striped table-hover")
+    table.table.table-bordered.table-striped.table-hover
         
         tr
-            th(class="text-center") Date
-            th(class="text-center") Weight
-            th(class="text-center")
+            th.text-center Date
+            th.text-center Weight
+            th.text-center
         
         for weight in weights
             tr
-                td(class="text-center") #{moment(weight.date).utc().format("MM/DD/YYYY")}
-                td(class="text-center") #{weight.weight}
-                td(class="text-center")
+                td.text-center #{moment(weight.date).utc().format("MM/DD/YYYY")}
+                td.text-center #{weight.weight}
+                td.text-center
                     a(href="#")
-                        span(class="glyphicon glyphicon-trash text-danger")
+                        span.glyphicon.glyphicon-trash.text-danger
