Hashing password as mongodb middleware. Adding password change form.

--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -28,3 +28,6 @@ block content
             input.form-control(type="email" name="email" value=user.email)
 
         button.btn.btn-default(type="submit") Update
+
+        div.pull-right
+            a(href="/user/password") Password Settings
