--- a/views/user/forgot.pug
+++ b/views/user/forgot.pug
@@ -3,7 +3,7 @@ extends ../layout.pug
 
 block content    
             
-    h1 Login
+    h1 Forgot
     
     br
         
@@ -12,17 +12,10 @@ block content
         for error in errors
             div.alert.alert-danger #{error.msg}
     
-    form(method="post" action="/user/login")
+    form(method="post" action="/user/forgot")
 
         div.form-group
             label Email
             input.form-control(type="email" name="email" placeholder="Email")
-        
-        div.form-group
-            label Password
-            input.form-control(type="password" name="password" placeholder="Password")
 
         button.btn.btn-default(type="submit") Submit
-        
-        div.pull-right
-            a(href="/user/forgot") Forgot Password?
